# chad-the-discord-bot

./: .env  README.md  bot.py  pyproject.toml  requirements.txt  uptime.py
cogs/: errors.py  eval.py  events.py  fun.py  games.py  help.py  info.py  loops.py  moderation.py  nerd.py  settings.py  socketfix.py  tasks.py  uptime.py  utils.py  vote.py  wordgames.py
databases/: afk.json  blacklist.json  lockdown.json  members.csv  people_who_know.json  pings.json  prefix.json  servers.csv  warnings.json
modules/: calculation_filter.py  decrypt.py  encrypt.py  languages.py
sounds/: REEEEE.m4a  STOP RIGHT THERE.m4a  YEET.m4a
text_files/: allwords.txt  alphabet.txt  emojimovie.json  hangmanwords.txt  key.txt  random_sentences.txt  roasts.txt  searchwords.txt  tokeniguess.txt
