[tool.poetry]
name = "repl_python3_chad-the-discord-bot"
version = "0.1.0"
description = ""
authors = ["ItsZeroAndOne <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
googletrans = "^3.1.0a0"
PyDictionary = "^2.0.1"
pyfiglet = "^0.8.post1"
tinydb = "^4.5.1"
urbandict = "^0.6.1"
wikipedia = "^1.4.0"
discord = "^1.7.3"
Flask = "^2.0.1"
PyNaCl="^1.4.0"
discord-components = "^1.1.4"
giphy-client= "^1.0.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
